# secops-secops-term

./: .gitignore  DECISIONS.md  INSTALL.md  README.md  pyproject.toml  secops_term.spec
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml
docs/: TEAM_ACCESS.md
scripts/: build_dist.py  seed_dev.py  serve_packages.py
secops_term/: __init__.py  __main__.py  app.py  cli.py
secops_term/ai/: __init__.py  audit.py  bridge.py  clipboard.py  nlp_prompts.py  nlp_query.py  nlp_validators.py  selector.py
secops_term/ai/prompts/: .gitkeep
secops_term/alerts/: __init__.py  dedup.py  ingest.py  normalize.py  types.py
secops_term/chronicle/: __init__.py  auth.py  client.py  factory.py  retro_hunt.py
secops_term/core/: __init__.py  audit.py  config_io.py  db.py  doctor.py  health.py  http.py  paths.py  redact.py  registry.py  secrets.py  url_guard.py
secops_term/core/migrations/: 001_intel.sql  __init__.py
secops_term/intel/: __init__.py  ioc.py  orchestrator.py  scraper.py  stix_export.py  store.py
secops_term/intel/providers/: __init__.py  abuse_ch.py  abuseipdb.py  base.py  greynoise.py  nvd.py  otx.py  rss.py  virustotal.py
secops_term/mcp/: __init__.py  gate.py  server.py  tools.py
secops_term/notifications/: __init__.py  base.py  generic_json.py  orchestrator.py  slack.py  teams.py
secops_term/playbooks/: __init__.py  engine.py  loader.py  runners.py  sandbox.py  schema.py
secops_term/playbooks/examples/: .gitkeep  daily-feed-pull.yaml  high-conf-ioc-followup.yaml  weekly-osint-roundup.yaml
secops_term/trendmicro/: __init__.py  deep_security.py  factory.py  v1_retro_hunt.py  vision_one.py
secops_term/ui/: __init__.py
secops_term/ui/screens/: __init__.py  alerts_screen.py  audit_screen.py  config_screen.py  dashboard_screen.py  intel_screen.py  playbooks_screen.py  query_screen.py  retro_hunts_screen.py
secops_term/ui/widgets/: __init__.py
tests/: __init__.py  conftest.py  test_bridge.py  test_cli.py  test_cli_ai.py  test_cli_hunt.py  test_cli_intel.py  test_cli_playbooks.py  test_config_io.py  test_db.py  test_discover.py  test_doctor.py  test_health.py  test_http.py  test_orchestrator.py  test_paths.py  test_registry.py  test_sandbox.py  test_secrets.py
tests/ai/: __init__.py  test_audit.py  test_clipboard.py  test_nlp_prompts.py  test_nlp_query.py  test_nlp_validators.py  test_selector.py
tests/alerts/: __init__.py  test_dedup.py  test_ingest.py  test_normalize.py
tests/chronicle/: __init__.py  test_auth.py  test_client.py  test_factory.py  test_retro_hunt.py
tests/intel/: __init__.py  test_ioc.py  test_scraper.py  test_stix_export.py  test_store.py  test_store_retro_hunt.py
tests/intel/providers/: __init__.py  test_abuse_ch.py  test_abuseipdb.py  test_greynoise.py  test_nvd.py  test_otx.py  test_registry.py  test_rss.py  test_virustotal.py
tests/mcp/: __init__.py  test_gate.py  test_server.py  test_tools.py
tests/notifications/: __init__.py  test_generic_json.py  test_orchestrator.py  test_registry.py  test_slack.py  test_teams.py
tests/playbooks/: __init__.py  test_engine.py  test_loader.py  test_schema.py
tests/security/: __init__.py  test_audit_chain.py  test_path_traversal.py  test_redaction.py  test_sandbox_injection.py  test_url_guard.py
tests/trendmicro/: __init__.py  test_deep_security.py  test_factory.py  test_factory_ds.py  test_vision_one.py
