[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "secops-term"
version = "0.6.0"
description = "Navigational TUI for SOC engineers — sits between SIEM and SOAR. Threat intel, retro hunts, alerts, playbooks, NLP to UDM/TMV1."
readme = "README.md"
requires-python = ">=3.14"
license = "MIT"
authors = [{ name = "SecOps Terminal" }]
keywords = ["siem", "soar", "soc", "tui", "threat-intel", "chronicle", "vision-one"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Environment :: Console :: Curses",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3.14",
    "Topic :: Security",
]
dependencies = [
    "textual>=0.80.0",
    "httpx[http2]>=0.27.0",
    "sqlite-utils>=3.36",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "keyring>=25.0",
    "cryptography>=42.0",
    "argon2-cffi>=23.1.0",
    "ruamel.yaml>=0.18",
    "iocextract>=1.16",
    "requests>=2.31",  # iocextract imports it but doesn't always declare it
    "google-auth>=2.0",  # Chronicle service-account → OAuth2 access tokens
    "feedparser>=6.0",
    "selectolax>=0.3.21",
    "typer>=0.12",
    "pyperclip>=1.9",
    "rich>=13.7",
    "mcp>=1.0",
    'pywin32>=306; platform_system == "Windows"',
]

[project.optional-dependencies]
dev = [
    "ruff>=0.5",
    "mypy>=1.10",
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "respx>=0.21",
]
build = [
    "pyinstaller>=6.7",
]
pdf = [
    "pypdf>=4.0",
]

[project.scripts]
secops-term = "secops_term.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["secops_term"]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = [
    "E",     # pycodestyle errors
    "F",     # pyflakes
    "I",     # isort
    "B",     # flake8-bugbear
    "S",     # flake8-bandit (security)
    "UP",    # pyupgrade
    "N",     # pep8-naming
    "W",     # pycodestyle warnings
    "ASYNC", # flake8-async
    "RUF",   # ruff-specific
]
ignore = [
    "E501",  # line length handled by formatter
    "N818",  # exception classes ending in "Error" — purely stylistic; we use descriptive names
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
    "S101", # `assert` is fine in tests
    "S105", # hardcoded password false positives in tests
    "S106",
    "S107", # hardcoded-password-default false positives on test fixture defaults
]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.14"
strict = true
warn_unreachable = true
warn_redundant_casts = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
module = [
    "iocextract.*",
    "feedparser.*",
    "selectolax.*",
    "ruamel.*",
    "argon2.*",
    "keyring.*",
    "pyperclip.*",
    "sqlite_utils.*",
    "pypdf.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "8.0"
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "security: security-primitive tests; run as a separate CI job that must pass",
    "slow: tests longer than 1 second",
    "network: tests that touch the real network (skipped by default)",
]
addopts = "-ra --strict-markers --strict-config"

[tool.coverage.run]
branch = true
source = ["secops_term"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
